UI rework: fixed history pages' overlapped tab navs.

--- a/app/assets/stylesheets/features/_history.css.scss
+++ b/app/assets/stylesheets/features/_history.css.scss
@@ -1,3 +1,8 @@
+.history-pages {
+  .nav-pills {
+    margin-bottom: 30px;
+  }
+}
 #history-transactions {
   #transactions {
     th {
